language_tests/source_files/valid/async_spawn_main.tr
func main() async {
    std.print("hello\n")

    let _ = std.futures.spawn(|| async {
        await std.testing.yieldNow()
        std.print("world\n")
    })
}
