language_tests/source_files/invalid/bitwise_float_operator_type_errors.tr
func main() {
    let _ = 1.0 | 2.0
    let _ = 1.0 ^ 2.0
    let _ = 1.0 << 1
}
